[gd_scene load_steps=42 format=3 uid="uid://cmaoex6yntqwa"]

[ext_resource type="Script" path="res://scenes/Towers/Catapult Tower/catapult_tower.gd" id="1_76d8u"]
[ext_resource type="Script" path="res://scenes/Towers/Catapult Tower/range.gd" id="2_ah8je"]
[ext_resource type="Script" path="res://assets/Addons/godot-donut-collision-polygon-2d-7780d026ae3d4a37fe68f43cc1f97ba664dd775d/addons/donut_collision_polygon2D/donut_collision_polygon2D.gd" id="3_toqbp"]
[ext_resource type="Texture2D" uid="uid://dxrh2xdhwjtri" path="res://assets/Towerpack2/Towers bases/PNGs/Tower 04.png" id="4_hixga"]
[ext_resource type="Texture2D" uid="uid://dt5mb12s8ul85" path="res://assets/HealthBar/Textures/Bar 3/LoadingBar_3_Background.png" id="4_omhlp"]
[ext_resource type="Texture2D" uid="uid://ddlbi8bp6kic3" path="res://assets/HealthBar/Textures/Bar 3/LoadingBar_3_Fill_Green.png" id="5_wx5tc"]
[ext_resource type="Texture2D" uid="uid://dwsng5tvt4nua" path="res://assets/Towerpack4/Towers Weapons/Tower 08/Spritesheets/Tower 08 - Level 03 - Projectile.png" id="6_1fsak"]
[ext_resource type="Texture2D" uid="uid://ch1su8mw3l034" path="res://assets/Towerpack2/Towers Weapons/Tower 04/PNGs/Tower 04 - Level 03 - Weapon.png" id="7_n4w2u"]
[ext_resource type="Script" path="res://scenes/Towers/Catapult Tower/projection_spawner.gd" id="8_o0ibc"]
[ext_resource type="PackedScene" uid="uid://7sbush60w3i0" path="res://scenes/Towers/Catapult Tower/Projectile.tscn" id="9_ujg82"]
[ext_resource type="AudioStream" uid="uid://q21haj0c8dco" path="res://assets/Sound/Tower Attack/shockwave.wav" id="11_ob41g"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vypdx"]
bg_color = Color(0.705882, 0.705882, 0.705882, 0.470588)
corner_radius_top_left = 999
corner_radius_top_right = 999
corner_radius_bottom_right = 999
corner_radius_bottom_left = 999

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_srxlk"]
bg_color = Color(0.412152, 0.412152, 0.412152, 0.470588)
corner_radius_top_left = 1024
corner_radius_top_right = 1024
corner_radius_bottom_right = 1024
corner_radius_bottom_left = 1024

[sub_resource type="RectangleShape2D" id="RectangleShape2D_27ggs"]
size = Vector2(64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7kcrg"]
atlas = ExtResource("6_1fsak")
region = Rect2(640, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_sqbks"]
atlas = ExtResource("6_1fsak")
region = Rect2(960, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_ta7o6"]
atlas = ExtResource("6_1fsak")
region = Rect2(1280, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_itonl"]
atlas = ExtResource("6_1fsak")
region = Rect2(1600, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_g3i8f"]
atlas = ExtResource("6_1fsak")
region = Rect2(2240, 0, 320, 320)

[sub_resource type="SpriteFrames" id="SpriteFrames_yv8an"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7kcrg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sqbks")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ta7o6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_itonl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g3i8f")
}],
"loop": false,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_c5exn"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_if4jc"]

[sub_resource type="AtlasTexture" id="AtlasTexture_s2ahw"]
atlas = ExtResource("7_n4w2u")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_bqny5"]
atlas = ExtResource("7_n4w2u")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_v562i"]
atlas = ExtResource("7_n4w2u")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_rmbil"]
atlas = ExtResource("7_n4w2u")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_f718e"]
atlas = ExtResource("7_n4w2u")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_u2xxs"]
atlas = ExtResource("7_n4w2u")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_57t60"]
atlas = ExtResource("7_n4w2u")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_xc1b2"]
atlas = ExtResource("7_n4w2u")
region = Rect2(896, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_13tof"]
atlas = ExtResource("7_n4w2u")
region = Rect2(1024, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_68lqg"]
atlas = ExtResource("7_n4w2u")
region = Rect2(1152, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_lkdl3"]
atlas = ExtResource("7_n4w2u")
region = Rect2(1280, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_dqnpu"]
atlas = ExtResource("7_n4w2u")
region = Rect2(1408, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ml63"]
atlas = ExtResource("7_n4w2u")
region = Rect2(1536, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_4rhe7"]
atlas = ExtResource("7_n4w2u")
region = Rect2(1664, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_62iqx"]
atlas = ExtResource("7_n4w2u")
region = Rect2(1792, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_tkb58"]
atlas = ExtResource("7_n4w2u")
region = Rect2(1920, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_qo20i"]
atlas = ExtResource("7_n4w2u")
region = Rect2(2048, 0, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_h6nx2"]
animations = [{
"frames": [{
"duration": 12.0,
"texture": SubResource("AtlasTexture_s2ahw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bqny5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v562i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rmbil")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f718e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u2xxs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_57t60")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xc1b2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_13tof")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_68lqg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lkdl3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dqnpu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ml63")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4rhe7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_62iqx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tkb58")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qo20i")
}],
"loop": false,
"name": &"Attack",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s2ahw")
}],
"loop": true,
"name": &"Idle",
"speed": 7.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_28f41"]
radius = 80.0

[node name="CatapultTower" type="StaticBody2D" groups=["Tower"]]
collision_layer = 3
collision_mask = 0
script = ExtResource("1_76d8u")
health = 1400
max_health = 1400
burst_damage = 70

[node name="Range" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 3
script = ExtResource("2_ah8je")

[node name="DonutCollisionPolygon2D" type="CollisionPolygon2D" parent="Range"]
polygon = PackedVector2Array(4.89843e-14, -800, 156.072, -784.628, 306.147, -739.104, 444.456, -665.176, 565.685, -565.685, 665.176, -444.456, 739.104, -306.147, 784.628, -156.072, 800, 0, 784.628, 156.072, 739.104, 306.147, 665.176, 444.456, 565.685, 565.685, 444.456, 665.176, 306.147, 739.104, 156.072, 784.628, 4.89843e-14, 800, -156.072, 784.628, -306.147, 739.104, -444.456, 665.176, -565.685, 565.685, -665.176, 444.456, -739.104, 306.147, -784.628, 156.072, -800, 9.79685e-14, -784.628, -156.072, -739.104, -306.147, -665.176, -444.456, -565.685, -565.685, -444.456, -665.176, -306.147, -739.104, -156.072, -784.628, -1.46953e-13, -800, -3.67382e-14, -200, -39.0181, -196.157, -76.5367, -184.776, -111.114, -166.294, -141.421, -141.421, -166.294, -111.114, -184.776, -76.5367, -196.157, -39.0181, -200, 2.44921e-14, -196.157, 39.0181, -184.776, 76.5367, -166.294, 111.114, -141.421, 141.421, -111.114, 166.294, -76.5367, 184.776, -39.0181, 196.157, 1.22461e-14, 200, 39.0181, 196.157, 76.5367, 184.776, 111.114, 166.294, 141.421, 141.421, 166.294, 111.114, 184.776, 76.5367, 196.157, 39.0181, 200, 0, 196.157, -39.0181, 184.776, -76.5367, 166.294, -111.114, 141.421, -141.421, 111.114, -166.294, 76.5367, -184.776, 39.0181, -196.157, 1.22461e-14, -200, 0.0001, -800)
script = ExtResource("3_toqbp")
radius = 500.0
width = 600.0

[node name="RangeIndicator" type="Node2D" parent="."]
visible = false

[node name="Range" type="Panel" parent="RangeIndicator"]
z_index = -1
offset_left = -800.0
offset_top = -800.0
offset_right = 800.0
offset_bottom = 800.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_vypdx")

[node name="Blindspot" type="Panel" parent="RangeIndicator"]
z_index = -1
offset_left = -200.0
offset_top = -200.0
offset_right = 200.0
offset_bottom = 200.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_srxlk")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_27ggs")

[node name="HealthBar" type="TextureProgressBar" parent="."]
offset_left = -51.0
offset_top = -115.0
offset_right = 1807.0
offset_bottom = 17.0
scale = Vector2(0.055, 0.2)
value = 100.0
texture_under = ExtResource("4_omhlp")
texture_progress = ExtResource("5_wx5tc")
texture_progress_offset = Vector2(100, 42)

[node name="Burst" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_yv8an")

[node name="Base" type="Sprite2D" parent="."]
material = SubResource("CanvasItemMaterial_c5exn")
position = Vector2(0, -32)
texture = ExtResource("4_hixga")
region_enabled = true
region_rect = Rect2(128, 0, 64, 128)

[node name="Weapon" type="AnimatedSprite2D" parent="."]
material = SubResource("CanvasItemMaterial_if4jc")
position = Vector2(0, -61)
sprite_frames = SubResource("SpriteFrames_h6nx2")
animation = &"Attack"

[node name="ProjectionSpawner" type="Node2D" parent="Weapon"]
position = Vector2(0, -56)
script = ExtResource("8_o0ibc")
projection = ExtResource("9_ujg82")

[node name="MouseArea" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="MouseArea"]
polygon = PackedVector2Array(-26, -93, 26, -93, 26, -62, 33, -32, 32, 33, -33, 32, -32, -34, -26, -62)

[node name="BurstArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BurstArea"]
shape = SubResource("CircleShape2D_28f41")

[node name="BurstSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("11_ob41g")
volume_db = -10.0

[connection signal="add_target" from="." to="." method="_on_add_target"]
[connection signal="remove_target" from="." to="." method="_on_remove_target"]
[connection signal="take_damage" from="." to="." method="_on_take_damage"]
[connection signal="body_entered" from="Range" to="Range" method="_on_body_entered"]
[connection signal="body_exited" from="Range" to="Range" method="_on_body_exited"]
[connection signal="frame_changed" from="Weapon" to="." method="_on_weapon_frame_changed"]
[connection signal="spawn" from="Weapon/ProjectionSpawner" to="Weapon/ProjectionSpawner" method="_on_spawn"]
[connection signal="mouse_entered" from="MouseArea" to="." method="_on_mouse_area_mouse_entered"]
[connection signal="mouse_exited" from="MouseArea" to="." method="_on_mouse_area_mouse_exited"]
[connection signal="body_entered" from="BurstArea" to="." method="_on_burst_area_body_entered"]
